--- a/blog-web/src/Css/Home.css
+++ b/blog-web/src/Css/Home.css
@@ -3,10 +3,10 @@ img {
   object-fit: cover;
 }
 
-.main {
+/* .main {
   position: relative;
   background: #000;
-}
+} */
 
 .card {
   position: absolute;
@@ -25,6 +25,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
+  height: 50px;
   z-index: 1;
   color: white; /* Set text color */
  
